--- a/src/app/cabecalho/cabecalho.component.html
+++ b/src/app/cabecalho/cabecalho.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar>
-    <div class="container">
-        <h1>Hardware Store</h1>
-        <span class="menu-spacer"></span>
-        <button mat-button routerLink="/">Home</button>
-        <button mat-button routerLink="quem-somos">Quem Somos</button>
-        <button mat-button routerLink="contato">Contato</button>
+    <h1><a href="/">Hardware Store</a></h1>
+
+    <span class="example-spacer"></span>
+    <div class="navigation">
+      <button mat-button routerLink="/">Home</button>
+      <button mat-button routerLink="quem-somos">Quem Somos</button>
+      <button mat-button routerLink="contato">Contato</button>
     </div>
-</mat-toolbar>
+  </mat-toolbar>
