--- a/src/app/contato/contato.component.scss
+++ b/src/app/contato/contato.component.scss
@@ -1,10 +1,10 @@
 @import "../app.component.scss";
 
 .container {
-    width: 1140px;
+    width: 90%;
     min-height: calc(100vh - 226px);
     display: block;
-    margin: auto;
+    margin-left: 15px;
 
     h1 {
         font-family: $fonte-principal;
@@ -15,10 +15,12 @@
     }
 
     form {
+        width: 100%;
         mat-form-field {
             display: block;
             font-family: $fonte-secundaria;
             font-size: $media;
+            width: 90vw;
         }
 
         button {
@@ -29,7 +31,7 @@
             line-height: $grande;
             border: none;
             border-radius: 4px;
-            width: 100%;
+            width: 90vw;
             height: 48px;
             cursor: pointer;
 
@@ -39,6 +41,25 @@
 
             &:disabled {
                 cursor: not-allowed;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 786px) {
+    .container {
+        min-height: calc(100vh - 226px);
+        width: 100%;
+        display: block;
+        margin: auto;
+        form {
+            display: block;
+            width: 100%;
+            mat-form-field {
+                width: 90vw;
+            }
+            button {
+                width: 90vw;
             }
         }
     }
